# copier-python-template

./: .gitignore  README.md  pyproject.toml  ruff.toml
copier/: messages.yml
copier/questions/: essential.yml  package_details.yml
template/: .gitignore  README.md.jinja  pyproject.toml.jinja  ruff.toml
tests/: test_project.py
