[tool.poetry]
name = "Copier Python Template"
version = "0.1.0"
description = "A simple python project template"
authors = ["Ruslan Hristov <rusi@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"
coverage = {extras = ["toml"], version = "^7.6.1"}
pytest-copie = "^0.2.0"
pyprojroot = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
